Implement configuration migration and diagnostics for improved config handling
- Introduced a new ConfigDiagnostics class to analyze user configurations for missing, deprecated, or unknown keys.
- Enhanced ConfigLoader to support loading raw user configurations and applying migrations automatically.
- Added ConfigMigration and related classes to facilitate versioned migrations from legacy flat configurations to a new nested structure.
- Updated BotConfig to utilize the new configuration handling, including diagnostics and migration logic.
- Refactored ConfigOption keys to follow a nested structure for better organization and clarity.
- Added tests for migration, diagnostics, and configuration loading to ensure robustness and correctness.